// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Logo component should render Logo component with horizontal type 1`] = `
<DocumentFragment>
<<<<<<< HEAD
  <div
    class="undefined"
  >
    <a
      href="/"
=======
  <a
    href="/"
  >
    <div
      class="undefined"
>>>>>>> develop
    >
      <svg
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium undefined css-i4bv87-MuiSvgIcon-root"
        focusable="false"
        role="img"
        viewBox="0 0 24 24"
      >
        <use
          href="/src/assets/icons/sprite.svg#icon-logo"
        />
        <title>
          Logo
        </title>
      </svg>
      <p
<<<<<<< HEAD
        class="MuiTypography-root MuiTypography-h3 css-14qosaq-MuiTypography-root"
      >
        Dashboard Kit
      </p>
    </a>
  </div>
=======
        class="MuiTypography-root MuiTypography-h3 css-army73-MuiTypography-root"
      >
        Dashboard Kit
      </p>
    </div>
  </a>
>>>>>>> develop
</DocumentFragment>
`;

exports[`Logo component should render Logo component with vertical type 1`] = `
<DocumentFragment>
<<<<<<< HEAD
  <div
    class=""
  >
    <a
      href="/"
=======
  <a
    href="/"
  >
    <div
      class=""
>>>>>>> develop
    >
      <svg
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
        focusable="false"
        role="img"
        viewBox="0 0 24 24"
      >
        <use
          href="/src/assets/icons/sprite.svg#icon-logo"
        />
        <title>
          Logo
        </title>
      </svg>
      <p
<<<<<<< HEAD
        class="MuiTypography-root MuiTypography-h3 css-14qosaq-MuiTypography-root"
      >
        Dashboard Kit
      </p>
    </a>
  </div>
=======
        class="MuiTypography-root MuiTypography-h3 css-army73-MuiTypography-root"
      >
        Dashboard Kit
      </p>
    </div>
  </a>
>>>>>>> develop
</DocumentFragment>
`;
